# neo_TMedian

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
include/dualsynth/: avs_wrapper.hpp  ds_common.hpp  ds_filter.hpp  ds_format.hpp  vs_wrapper.hpp
src/: neo_tmedian.hpp  tmedian.hpp  tmedian_AVX2.cpp  tmedian_AVX512.cpp  tmedian_SIMD.hpp  tmedian_SSE41.cpp  tmedian_common.h
